--- a/templates/comptabilite/contrats.html.twig
+++ b/templates/comptabilite/contrats.html.twig
@@ -57,7 +57,7 @@
                             </p>
                         </div>
                         <div class="card-footer bg-white d-flex gap-2">
-                            <a href="#" class="btn btn-sm btn-outline-primary flex-fill">
+                            <a href="{{ path('app_comptabilite_contrat_show', {id: contrat.id}) }}" class="btn btn-sm btn-outline-primary flex-fill">
                                 <i class="bi bi-eye"></i> Voir
                             </a>
                         </div>
