--- a/templates/demande_conge/show.html.twig
+++ b/templates/demande_conge/show.html.twig
@@ -21,11 +21,11 @@
             </tr>
             <tr>
                 <th>TypeConge</th>
-                <td>{{ demande_conge.typeConge }}</td>
+                <td>{{ demande_conge.typeConge.value }}</td>
             </tr>
             <tr>
                 <th>Statut</th>
-                <td>{{ demande_conge.statut }}</td>
+                <td>{{ demande_conge.statut.value }}</td>
             </tr>
             <tr>
                 <th>DateDemande</th>
