--- a/templates/contrat/_form.html.twig
+++ b/templates/contrat/_form.html.twig
@@ -30,11 +30,22 @@
     </div>
 
     <div class="d-flex gap-2 mt-4">
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" name="save_only" class="btn btn-primary">
             <i class="bi bi-check-circle"></i> {{ button_label|default('Enregistrer') }}
         </button>
-        <a href="{{ path('app_contrat_index') }}" class="btn btn-outline-secondary">
-            <i class="bi bi-x-circle"></i> Annuler
-        </a>
+        {% if not contrat.id or contrat.id == 0 %}
+            <button type="submit" name="continue_config" value="1" class="btn btn-success">
+                <i class="bi bi-arrow-right-circle"></i> Enregistrer et configurer
+            </button>
+        {% endif %}
+        {% if contrat.id is defined and contrat.id %}
+            <a href="{{ path('app_contrat_show', {'id': contrat.id}) }}" class="btn btn-outline-secondary">
+                <i class="bi bi-x-circle"></i> Annuler
+            </a>
+        {% else %}
+            <a href="{{ path('app_contrat_index') }}" class="btn btn-outline-secondary">
+                <i class="bi bi-x-circle"></i> Annuler
+            </a>
+        {% endif %}
     </div>
 {{ form_end(form) }}
