--- a/templates/intervention/index.html.twig
+++ b/templates/intervention/index.html.twig
@@ -26,8 +26,8 @@
                 <td>{{ intervention.id }}</td>
                 <td>{{ intervention.dateCreation ? intervention.dateCreation|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ intervention.dateIntervention ? intervention.dateIntervention|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ intervention.typeIntervention }}</td>
-                <td>{{ intervention.statut }}</td>
+                <td>{{ intervention.typeIntervention.value }}</td>
+                <td>{{ intervention.statut.value }}</td>
                 <td>{{ intervention.description }}</td>
                 <td>{{ intervention.tempsFacturableMinutes }}</td>
                 <td>{{ intervention.tempsReelMinutes }}</td>
